--- a/Report/wf_ReportFinal_Cidades.xaml
+++ b/Report/wf_ReportFinal_Cidades.xaml
@@ -5,7 +5,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>628,1069</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>654,969</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>wf_ReportFinal_Cidades_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="31">
@@ -69,8 +69,6 @@
   <Sequence sap2010:Annotation.AnnotationText="Construir uma tabela de dados com as informações extraídas no IBGE." DisplayName="wf_ReportFinal_Cidades" sap:VirtualizedContainerService.HintSize="454,904" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="var_dtDadosIBGE" />
-      <Variable x:TypeArguments="scg:IEnumerable(ui:QueueItem)" Name="var_qeDadosIBGE" />
-      <Variable x:TypeArguments="x:Int32" Name="var_intSkip" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -82,6 +80,10 @@
     <ui:InterruptibleDoWhile DisplayName="Do While" sap:VirtualizedContainerService.HintSize="412,527" sap2010:WorkflowViewState.IdRef="InterruptibleDoWhile_1">
       <ui:InterruptibleDoWhile.Body>
         <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="376,362" sap2010:WorkflowViewState.IdRef="Sequence_3">
+          <Sequence.Variables>
+            <Variable x:TypeArguments="x:Int32" Name="var_intSkip" />
+            <Variable x:TypeArguments="scg:IEnumerable(ui:QueueItem)" Name="var_qeDadosIBGE" />
+          </Sequence.Variables>
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
